fixed footer alignment

--- a/src/components/RegistrationForm/RegistrationForm.css
+++ b/src/components/RegistrationForm/RegistrationForm.css
@@ -10,7 +10,18 @@
   text-align: center;
 }
 
+.haveAnAccount {
+  font-size: 16px;
+}
+
+
 .haveAnAccount:link,
 .haveAnAccount:visited {
   color: navy;
+}
+
+footer {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
 }
